@@ -1,6 +1,6 @@
 /*****************************************************************************
 
- @(#) $RCSfile: strMIB.c,v $ $Name:  $($Revision: 0.9.2.4 $) $Date: 2007/10/15 17:21:27 $
+ @(#) $RCSfile: strMIB.c,v $ $Name:  $($Revision: 0.9.2.5 $) $Date: 2007/10/15 19:02:42 $
 
  -----------------------------------------------------------------------------
 
@@ -45,11 +45,14 @@
 
  -----------------------------------------------------------------------------
 
- Last Modified $Date: 2007/10/15 17:21:27 $ by $Author: brian $
+ Last Modified $Date: 2007/10/15 19:02:42 $ by $Author: brian $
 
  -----------------------------------------------------------------------------
 
  $Log: strMIB.c,v $
+ Revision 0.9.2.5  2007/10/15 19:02:42  brian
+ - net-snmp build corrections
+
  Revision 0.9.2.4  2007/10/15 17:21:27  brian
  - SNMP updates
 
@@ -64,10 +67,10 @@
 
  *****************************************************************************/
 
-#ident "@(#) $RCSfile: strMIB.c,v $ $Name:  $($Revision: 0.9.2.4 $) $Date: 2007/10/15 17:21:27 $"
+#ident "@(#) $RCSfile: strMIB.c,v $ $Name:  $($Revision: 0.9.2.5 $) $Date: 2007/10/15 19:02:42 $"
 
 static char const ident[] =
-    "$RCSfile: strMIB.c,v $ $Name:  $($Revision: 0.9.2.4 $) $Date: 2007/10/15 17:21:27 $";
+    "$RCSfile: strMIB.c,v $ $Name:  $($Revision: 0.9.2.5 $) $Date: 2007/10/15 19:02:42 $";
 
 /* This file was generated by mib2c and is intended for use as
    a mib module for the ucd-snmp snmpd agent. */
@@ -83,14 +86,13 @@ static char const ident[] =
 /* The following header files are mangled in most recent net-snmp releases so
  * the versions from UCD-SNMP 4.2.5 are included here.  */
 #if defined HAVE_LIBNETSNMP
-#include "ds_agent.h"
-#include "header_complex.h"
-#include "util_funcs.h"
 #else				/* defined HAVE_LIBNETSNMP */
-#include <ucd-snmp/ds_agent.h>
-#include <ucd-snmp/header_complex.h>
-#include <ucd-snmp/util_funcs.h>
 #endif				/* defined HAVE_LIBNETSNMP */
+
+/* These are messed up on both. */
+#include "ds_agent.h"
+#include "util_funcs.h"
+#include "header_complex.h"
 
 /* This one is the other way around: it is just fine for net-snmp, but
  * ucd-snmp does not provide the header file at all.  */
