@@ -10,6 +10,8 @@
 	* Makefile.am: added WITH_SNMP_AGENT conditional
 	* m4/agent.m4: added WITH_SNMP_AGENT conditional
 	* src/snmp/strMIB.c: correct include file for net-snmp 5.2.1
+	* src/snmp/mib_modules.h: net-snmp build corrections
+	* src/snmp/strMIB.c: net-snmp build corrections
 
 2007-10-13  Brian Bidulock  <bidulock@openss7.org>
 
